<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:columnCount="3"
    android:useDefaultMargins="true"

    tools:context=".Kilotakip">


    <EditText
        android:id="@+id/boyText"
        android:layout_height="28dp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:digits="0123456789"
        android:ems="10"
        android:inputType="number"
        android:maxLength="3" >
        <requestFocus/>
    </EditText>



    <TextView
        android:id="@+id/boyTv"
        android:layout_width="215dp"
        android:layout_height="38dp"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:background="#40C4FF" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:text="@string/boytv" />


    <TextView
        android:id="@+id/kilotv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:text="@string/Kilotv" />

    <SeekBar
        android:id="@+id/seekbar1"
        android:layout_width="178dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:progress="20" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:text="45 kg" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:text="@string/Cinsiyet" />

    <RadioGroup android:id="@+id/radio">
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:orientation="horizontal"/>
    <RadioButton
        android:id="@+id/bay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"

        android:checked="true"
        android:text="@string/Bay" />

    <RadioButton
        android:id="@+id/bayan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:text="@string/Bayan" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:text="@string/idealkg" />

    <TextView
        android:id="@+id/idealText"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="right|center_horizontal"
        android:text="@string/durum" />

    <TextView
        android:id="@+id/durumText"
        android:layout_width="124dp"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:gravity="fill_horizontal" />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="6"
        android:layout_column="0" />




</GridLayout>